--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="searchbutton"><img src="search.png" alt=""></button>
     </div>
     <div class="errormessage" id="errormsg">
-        <h3>COULD  NOT FID THE WORD</h3>
+        <h3>COULD  NOT FIND THE WORD</h3>
     </div>
  
   <div class="result" id="result">
